use java_11 and jackson-annotations in favour of jaxb-annotations